Fixed the visibility icon's position

--- a/css/modals.css
+++ b/css/modals.css
@@ -17,7 +17,7 @@
 }
 
 /* Hide header search bar when search modal is active */
-.modal-overlay:not(.hidden)~header #search-bar {
+.modal-overlay:not(.hidden) ~ header #search-bar {
 	display: none;
 }
 
@@ -82,36 +82,43 @@
 	position: relative;
 	display: flex;
 	align-items: center;
+	margin-bottom: 0.5em;
 }
 
 .password-input-container input[type="password"],
 .password-input-container input[type="text"] {
 	padding-right: 40px;
 	/* Make space for the icon */
+	display: block;
+	width: 100%;
+	margin-bottom: 0;
 }
 
 .toggle-password {
 	position: absolute;
 	right: 10px;
-	top: 50%;
-	transform: translateY(-50%);
+	top: 0;
+	bottom: 0;
+	width: 40px;
 	background: none;
 	border: none;
 	cursor: pointer;
 	padding: 0;
 	display: flex;
-	/* To center the icon vertically and horizontally if needed */
+	/* Vertically and horizontally center the icon */
 	align-items: center;
 	justify-content: center;
-	line-height: 0;
-	/* To prevent extra space around the icon */
+	margin: 0;
 }
 
 .toggle-password i.material-icons {
-	font-size: 1.5em;
-	/* Adjust size as needed */
+	font-size: 1.3em;
+	/* Slightly smaller size for better alignment */
 	color: rgba(0, 0, 0, 0.54);
 	/* Default icon color */
+	display: block;
+	margin-top: 2px;
+	/* Fine-tune vertical alignment */
 }
 
 /* Shared button container styles */
@@ -229,14 +236,14 @@
 	bottom: -0.56em;
 }
 
-#goflow-modal .modal-content>p:nth-of-type(1) {
+#goflow-modal .modal-content > p:nth-of-type(1) {
 	font-size: 2rem;
 	position: absolute;
 	left: 4em;
 	top: 2em;
 }
 
-#goflow-modal .modal-content>p:nth-of-type(2) {
+#goflow-modal .modal-content > p:nth-of-type(2) {
 	position: absolute;
 	left: 2.125em;
 	top: 14.25em;
@@ -292,12 +299,12 @@
 	right: 0;
 }
 
-#goflow-modal .modal-content.login>p:nth-of-type(1) {
+#goflow-modal .modal-content.login > p:nth-of-type(1) {
 	font-size: 2rem;
 	top: 2em;
 }
 
-#goflow-modal .modal-content.login>p:nth-of-type(2) {
+#goflow-modal .modal-content.login > p:nth-of-type(2) {
 	top: 14.25em;
 	font-size: 1.4rem;
 }
@@ -374,12 +381,12 @@
 		right: 0;
 	}
 
-	#goflow-modal .modal-content.login>p:nth-of-type(1) {
+	#goflow-modal .modal-content.login > p:nth-of-type(1) {
 		font-size: 1.2rem;
 		top: 1.2em;
 	}
 
-	#goflow-modal .modal-content.login>p:nth-of-type(2) {
+	#goflow-modal .modal-content.login > p:nth-of-type(2) {
 		top: 8.5em;
 		font-size: 1rem;
 	}
@@ -507,7 +514,7 @@
 	z-index: -1;
 }
 
-#edit-profile-modal .form input[type="file"]+label.file-label {
+#edit-profile-modal .form input[type="file"] + label.file-label {
 	padding: 10px 15px;
 	background: var(--orange);
 	color: var(--peach);
@@ -521,7 +528,7 @@
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-#edit-profile-modal .form input[type="file"]+label.file-label:hover {
+#edit-profile-modal .form input[type="file"] + label.file-label:hover {
 	background-color: var(--peach);
 	color: var(--orange);
 	border: 2px solid var(--orange);
@@ -663,9 +670,9 @@ h4.important-changes {
 }
 
 /* Remove the conflicting selector that was added earlier */
-#edit-profile-modal .form>label+input,
-#edit-profile-modal .form>label+textarea,
-#edit-profile-modal .form>label+.password-input-container {
+#edit-profile-modal .form > label + input,
+#edit-profile-modal .form > label + textarea,
+#edit-profile-modal .form > label + .password-input-container {
 	margin-bottom: 0;
 	/* Reset this so it doesn't add extra spacing */
 }
@@ -1307,7 +1314,10 @@ h4.important-changes {
 	display: none;
 }
 
-#subcategory-modal .subcategory-checkboxes input[type="checkbox"]:checked+label,
+#subcategory-modal
+	.subcategory-checkboxes
+	input[type="checkbox"]:checked
+	+ label,
 #subcategory-modal .subcategory-checkboxes label.selected {
 	background: var(--orange);
 	color: #fff;
@@ -1318,7 +1328,10 @@ h4.important-changes {
 	display: none;
 }
 
-#subcategory-modal .subcategory-checkboxes input[type="checkbox"]:checked+label::before {
+#subcategory-modal
+	.subcategory-checkboxes
+	input[type="checkbox"]:checked
+	+ label::before {
 	background: var(--orange);
 	border-color: var(--orange);
 	box-shadow: 0 0 0 2px #fff inset;
